--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     card_view:cardBackgroundColor="#E6E6E6"
     card_view:cardCornerRadius="8dp"
@@ -11,12 +11,10 @@
 
     <TextView
         android:id="@+id/tour_location_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/LocationTitleStyle" />
 
     <TextView
         android:id="@+id/tour_location_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/LocationDescriptionStyle" />
 
 </android.support.v7.widget.CardView>
