--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -4,17 +4,26 @@
     android:id="@+id/card_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     card_view:cardBackgroundColor="#E6E6E6"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="8dp">
 
-    <TextView
-        android:id="@+id/tour_location_title"
-        style="@style/LocationTitleStyle" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tour_location_description"
-        style="@style/LocationDescriptionStyle" />
+        <TextView
+            android:id="@+id/tour_location_title"
+            style="@style/LocationTitleStyle" />
+
+        <TextView
+            android:id="@+id/tour_location_description"
+            style="@style/LocationDescriptionStyle" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
