--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -24,6 +24,11 @@
             android:id="@+id/tour_location_description"
             style="@style/LocationDescriptionStyle" />
 
+        <ImageView
+            android:id="@+id/tour_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
