--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -27,7 +27,8 @@
         <ImageView
             android:id="@+id/tour_image"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:layout_marginBottom="16dp"/>
 
     </LinearLayout>
 
