--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="LocationTitleStyle">
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_margin">@dimen/title_padding</item>
         <item name="android:textSize">@dimen/location_title_text_size</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
@@ -19,11 +19,17 @@
     </style>
 
     <style name="LocationDescriptionStyle">
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_margin">@dimen/desc_padding</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">@dimen/location_description_text_size</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="LocationImageStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/image_height</item>
+        <item name="android:layout_marginBottom">@dimen/image_margin_bottom</item>
     </style>
 
 </resources>
